# exercism-rust

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/: mergify.yml
.github/workflows/: check.yml  ci.yml
anagram/src/: lib.rs
armstrong-numbers/src/: lib.rs
clock/src/: lib.rs
difference-of-squares/src/: lib.rs
gigasecond/src/: lib.rs
high-scores/: Cargo.toml
high-scores/src/: lib.rs
leap/src/: lib.rs
raindrops/src/: lib copy.rs  lib.rs
reverse-string/: Cargo.toml
reverse-string/src/: lib.rs
