# This is a "virtual manifest", to conveniently run the tests from one place:
#  * https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
members = [
  "hello-world",
  "reverse-string",
  "gigasecond",
  "clock",
  "leap",
  "raindrops",
  "anagram",
  "difference-of-squares",
  "high-scores",
  "armstrong-numbers"
]
